--- a/SistemaDePagoDeAranceles/appsettings.json
+++ b/SistemaDePagoDeAranceles/appsettings.json
@@ -1,12 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=3306;Database=gestionaranceles;Uid=arancelapp;Pwd=;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MySqlConnection": ""
-  }
+  "AllowedHosts": "*"
 }
