--- a/SistemaDePagoDeAranceles/Properties/launchSettings.json
+++ b/SistemaDePagoDeAranceles/Properties/launchSettings.json
@@ -15,8 +15,7 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5136",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "ConnectionStrings__MySqlConnection": "Server=localhost,3306;Database=gestion_proyectos;Uid=root;Pwd=12345;"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "IIS Express": {
