--- a/SistemaDePagoDeAranceles/appsettings.json
+++ b/SistemaDePagoDeAranceles/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConnection": "Server=localhost;Port=3306;Database=gestionaranceles;Uid=gestionapp;Pwd=;"
+    "MySqlConnection": "Server=localhost;Port=3306;Database=gestionaranceles;Uid=arancelapp;Pwd=;"
   },
   "Logging": {
     "LogLevel": {
