Fix establishments index html (#12)
* Fix: correct header markup in Establecimientos Index.html

* Corrección vista edit-create

---------

Co-authored-by: Andre Cadima <andrecadimaschool@gmail.com>
Co-authored-by: ASalinasVe <alejandra.salinas@ucb.edu.bo>

--- a/SistemaDePagoDeAranceles/appsettings.json
+++ b/SistemaDePagoDeAranceles/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConnection": "Server=localhost;Port=3306;Database=gestionaranceles;Uid=root;Pwd=password;"
+    "MySqlConnection": "Server=localhost;Port=3306;Database=gestionaranceles;Uid=arancelapp;Pwd=;"
   },
   "Logging": {
     "LogLevel": {
