--- a/SistemaDePagoDeAranceles/SistemaDePagoDeAranceles.csproj
+++ b/SistemaDePagoDeAranceles/SistemaDePagoDeAranceles.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="9.0.9" />
+    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.21" />
     <PackageReference Include="MySql.Data" Version="9.4.0" />
   </ItemGroup>
 
