--- a/SistemaDePagoDeAranceles/appsettings.json
+++ b/SistemaDePagoDeAranceles/appsettings.json
@@ -2,6 +2,14 @@
   "ConnectionStrings": {
     "MySqlConnection": "Server=localhost;Port=3306;Database=gestionaranceles;Uid=root;Pwd=password;"
   },
+  "Email": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "SmtpUser": "fernando19garciag@gmail.com",
+    "SmtpPassword": "chdp mcth jmbu iamq",
+    "FromEmail": "fernando19garciag@gmail.com",
+    "FromName": "Sistema de Pagos de Aranceles"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
