--- a/SistemaDePagoDeAranceles/appsettings.json
+++ b/SistemaDePagoDeAranceles/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConnection": "Server=localhost;Port=3306;Database=pago1;user=root;password=12345678;"
+    "MySqlConnection": "Server=localhost;Port=3306;Database=gestionaranceles;user=root;password=;"
   },
   "Email": {
     "SmtpHost": "smtp.gmail.com",
